# unnamed-project

./: CMakeLists.txt  CMakePresets.json
src/: board.cpp  board.h  game.cpp  game.h  main.cpp  player.cpp  player.h  term.cpp  term.h
